--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -13,11 +13,18 @@
     </p>
     <p>
         <label for="year">Year</label>
-        <input type="text" name="year" id="year">
+        <input type="number" min="1900" max="2099" step="1" value="2022" name="year" id="year">
     </p>
     <p>
         <label for="genre">Genre</label>
         <input type="text" name="genre" id="genre">
+    </p>
+    <p>
+        <label for="mode">Mode</label>
+        <select name="genre" id="genre">
+            <option value="single-player">Single-player</option>
+            <option value="multiplayer">Multiplayer</option>
+        </select>
     </p>
     <input type="submit" name="" id="" value="Create">
 </form>
