--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,2 +1,42 @@
+<%- include ('../partials/head.ejs') %>
+
 <h1><%= game.name %></h1>
-<p><%= game.genre %></p>
+
+<h3>Developer</h3>
+<p><%= game.developer %></p>
+
+<h3>Publisher</h3>
+<p><%= game.publisher %></p>
+
+<h3>Year</h3>
+<p><%= game.year %></p>
+
+<h3>Platform</h3>
+<ul>
+    <% game.platform.forEach(platform => { %>
+        <li><%= platform %></li>
+    <% }) %>
+</ul>
+
+<h3>Genre</h3>
+<ul>
+    <% game.genre.forEach(genre => { %>
+        <li><%= genre %></li>
+    <% }) %>
+</ul>
+
+<h3>Mode</h3>
+<ul>
+    <% game.mode.forEach(mode => { %>
+        <li><%= mode %></li>
+    <% }) %>
+</ul>
+
+<h3>Tags</h3>
+<ul>
+    <% game.tags.forEach(tag => { %>
+        <li><%= tag %></li>
+    <% }) %>
+</ul>
+
+<%- include ('../partials/footer.ejs') %>
