--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,33 +1,56 @@
 <%- include ('../partials/head.ejs') %>
-<h1>Update <%= game.name %></h1>
-<form action="/<%= game.id %>?_method=put" method="post">
-    <p>
+<h3>Update <%= game.name %></h3>
+<form action="<%= baseUrl %>/<%= game.id %>?_method=PUT" method="post" enctype="multipart/form-data">
+    <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name" value="<%= game.name %>">
-    </p>
-    <p>
+        <input class="form-control" type="text" name="name" id="name" value="<%= game.name %>">
+    </div>
+    <div class="form-group">
         <label for="developer">Developer</label>
-        <input type="text" name="developer" id="developer" value="<%= game.developer %>">
-    </p>
-    <p>
+        <input class="form-control" type="text" name="developer" id="developer" value="<%= game.developer %>">
+    </div>
+    <div class="form-group">
         <label for="publisher">Publisher</label>
-        <input type="text" name="publisher" id="publisher" value="<%= game.publisher %>">
-    </p>
-    <p>
+        <input class="form-control" type="text" name="publisher" id="publisher" value="<%= game.publisher %>">
+    </div>
+    <div class="form-group">
         <label for="year">Year</label>
-        <input type="number" min="1900" max="2099" step="1" value="2022" name="year" id="year" value="<%= game.year %>">
-    </p>
-    <p>
+        <input class="form-control" type="number" min="1900" max="2099" step="1" value="2022" name="year" id="year" value="<%= game.year %>">
+    </div>
+    <div class="form-group">
         <label for="genre">Genre</label>
-        <input type="text" name="genre" id="genre" value="<%= game.genre %>">
-    </p>
-    <p>
-        <label for="mode">Mode</label>
-        <select name="genre" id="genre">
-            <option value="single-player">Single-player</option>
-            <option value="multiplayer">Multiplayer</option>
-        </select>
-    </p>
-    <input type="submit" name="" id="" value="Create">
+        <textarea
+        name="genre"
+        id="genre"
+        rows="7"
+        cols="35"
+        value="<%= game.genre %>"
+        ><%= game.genre %></textarea>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="mode" value="single-player" id="defaultCheck1" checked disabled/>
+        <label class="form-check-label" for="defaultCheck1">
+          Single-player
+        </label>
+    </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="mode" value="multiplayer" id="defaultCheck2"
+        <% if (game.mode === "Multiplayer") { %>
+            checked
+        <% } %>
+        />
+        <label class="form-check-label" for="defaultCheck2">
+          Multiplayer
+        </label>
+    </div>
+    <div class="form-group">
+        <label for="img">Image</label>
+        <input class="form-control" id="img" name="img" type="file" />
+    </div>
+    <div class="form-group">
+        <label for="tags">Tags</label>
+        <input class="form-control" type="text" name="tags" id="tags" value="<%= game.genre %>">
+    </div>
+    <input type="submit" name="" id="" value="Update">
 </form>
 <%- include ('../partials/footer.ejs') %>
