--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
-    <title><%= tabTitle %>></title>
+    <title><%= tabTitle %></title>
 </head>
 <body>
-    <div>
-        <header>
-            <h1 class="games-id">GAMES</h1>
-        </header>
+    <header class="bg-dark navbar-static-top">
+      <div class="container">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark navbar-static-top">
+  
+          <a class="navbar-brand" href="/">Games</a>
+    
+          <button 
+          class="navbar-toggler" 
+          type="button" 
+          data-bs-toggle="collapse" 
+          data-bs-target="#burger-content" 
+          aria-controls="#burger-content" 
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div id="burger-content" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Games List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/">Playlists</a>
+              </li>
+    
+              <% if (currentUser) { %>
+                <li class="nav-item">
+                  <a class="nav-link" href="/new">Add a new game</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/new">Add a new playlist</a>
+                </li>
+              <% } %>
+    
+              <li class="nav-item">
+                <% if (currentUser) { %>
+                  <a class="nav-link" href="/logout">Log Out</a>
+                <% } else { %>
+                  <a class="nav-link" href="/login">Log In</a>
+                <% } %>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+  
+    <main>
+  
