--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,10 +2,25 @@
     box-sizing: border-box;
 }
 
+:root {
+    --bg-color: #b9b0a4;
+    --secondary-color: #676870;
+    --third-color: #7c6b71;
+    --fourth-color: #e5cfbf;
+    --dark-color: #47484d;
+    --text-color: #f7f7f7;
+}
+
 html, body {
+    background-color: var(--bg-color);
     width: 100%;
     margin: 0;
     padding: 0;
+    color: #f0f8ff;
+}
+
+main {
+    margin: 30px auto;
 }
 
 .games-list {
@@ -17,8 +32,10 @@ html, body {
 }
 
 .card {
+    background-color: var(--secondary-color);
     width: 100%;
     max-width: 320px;
+    height: 435px;
     border-radius: 4px;
     box-shadow: -2px 2px 8px 0 rgba(0, 0,0,0.2);
     transition: 0.4s;
@@ -38,5 +55,32 @@ html, body {
 }
 
 .action-bar {
+    display: flex;
+    justify-content: space-between;
     padding: 8px 12px;
-  }
+}
+
+a:link {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.edit:link {
+    color: white;
+}
+
+.game-info {
+    background-color: var(--secondary-color);
+    margin: 50px 30px;
+    border: 2px solid var(--dark-color);
+    border-radius: 10px;
+}
+
+.description {
+    padding: 30px;
+}
+
+.game-img {
+    max-width: 225px;
+    border-radius: 20px;
+}
