--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -19,13 +19,7 @@
     </div>
     <div class="form-group">
         <label for="genre">Genre</label>
-        <textarea
-        name="genre"
-        id="genre"
-        rows="7"
-        cols="35"
-        value="<%= game.genre %>"
-        ><%= game.genre %></textarea>
+        <input class="form-control" type="text" name="genre" id="genre" value="<%= game.genre %>"/>
     </div>
     <div class="form-check">
         <input class="form-check-input" type="checkbox" name="mode" value="single-player" id="defaultCheck1" checked disabled/>
@@ -49,7 +43,7 @@
     </div>
     <div class="form-group">
         <label for="tags">Tags</label>
-        <input class="form-control" type="text" name="tags" id="tags" value="<%= game.genre %>">
+        <input class="form-control" type="text" name="tags" id="tags" value="<%= game.tags %>">
     </div>
     <input type="submit" name="" id="" value="Update">
 </form>
