--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -4,43 +4,47 @@
     
     <div class="description">
         <img class="game-img" src="<%= game.img %>" alt="">
-        
-        <h1><%= game.name %></h1>
+        <div class="upper-row">
+            <h1><%= game.name %></h1>
 
-        <h3>Type</h3>
-        <p><%= game.type %></p>
+            <h4>Year</h4>
+            <p><%= game.year %></p>
+    
+            <h4>Type</h4>
+            <p><%= game.type %></p>
+            
+            <h4>Developer</h4>
+            <p><%= game.developer %></p>
+            
+            <h4>Publisher</h4>
+            <p><%= game.publisher %></p>
+        </div>
         
-        <h3>Developer</h3>
-        <p><%= game.developer %></p>
-        
-        <h3>Publisher</h3>
-        <p><%= game.publisher %></p>
-        
-        <h3>Year</h3>
-        <p><%= game.year %></p>
-        
-        <h3>Platform</h3>
+        <div>
+            
+        </div>
+        <h4>Platform</h4>
         <ul>
             <% game.platform.forEach(platform => { %>
                 <li><%= platform %></li>
             <% }) %>
         </ul>
         
-        <h3>Genre</h3>
+        <h4>Genre</h4>
         <ul>
             <% game.genre.forEach(genre => { %>
                 <li><%= genre %></li>
             <% }) %>
         </ul>
         
-        <h3>Mode</h3>
+        <h4>Mode</h4>
         <ul>
             <% game.mode.forEach(mode => { %>
                 <li><%= mode %></li>
             <% }) %>
         </ul>
         
-        <h3>Tags</h3>
+        <h4>Tags</h4>
         <ul>
             <% game.tags.forEach(tag => { %>
                 <li><%= tag %></li>
