--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,7 +13,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark navbar-static-top">
   
-          <a class="navbar-brand" href="/">Games</a>
+          <a class="navbar-brand" href="/games">Games</a>
     
           <button 
           class="navbar-toggler" 
@@ -28,18 +28,24 @@
           <div id="burger-content" class="collapse navbar-collapse">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/">Games List</a>
+                <a class="nav-link" href="/games">Video Games List</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Playlists</a>
+                <a class="nav-link" href="/tabletop">Tabletop List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/playlists">Playlists</a>
               </li>
     
               <% if (currentUser) { %>
                 <li class="nav-item">
-                  <a class="nav-link" href="/new">Add a new game</a>
+                  <a class="nav-link" href="/games/new">Add a new game</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/new">Add a new playlist</a>
+                  <a class="nav-link" href="/tabletop/new">Add a new tabletop</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/playlist/new">Add a new playlist</a>
                 </li>
               <% } %>
     
