--- a/views/tabletops/new.ejs
+++ b/views/tabletops/new.ejs
@@ -1,13 +1,13 @@
 <%- include ('../partials/head.ejs') %>
-<h2>Add a New Game</h2>
+<h2>Add a New Tabletop</h2>
 <form action="<%= baseUrl %>" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="name">Name</label>
         <input class="form-control" type="text" name="name" id="name" />
     </div>
     <div class="form-group">
-        <label for="developer">Developer</label>
-        <input class="form-control" type="text" name="developer" id="developer" />
+        <label for="designers">Designers</label>
+        <input class="form-control" type="text" name="designers" id="designers" />
     </div>
     <div class="form-group">
         <label for="publisher">Publisher</label>
@@ -18,33 +18,21 @@
         <input class="form-control" type="number" min="1900" max="2099" step="1" value="2022" name="year" id="year" />
     </div>
     <div class="form-group">
-        <label for="platform">Platform</label>
-        <input class="form-control" type="text" name="platform" id="platform" />
-    </div>
-    <div class="form-group">
         <label for="genre">Genre</label>
         <input class="form-control" type="text" name="genre" id="genre" />
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="mode" value="Single-player" id="defaultCheck1" />
-        <label class="form-check-label" for="defaultCheck1">
-          Single-player
-        </label>
-    </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="mode" value="Multiplayer" id="defaultCheck2" />
-        <label class="form-check-label" for="defaultCheck2">
-          Multiplayer
-        </label>
     </div>
     <div class="form-group">
         <label for="img">Image</label>
         <input class="form-control" id="img" name="img" type="file" />
     </div>
     <div class="form-group">
+        <label for="model">Model</label>
+        <input class="form-control" id="model" name="model" type="file" />
+    </div>
+    <div class="form-group">
         <label for="tags">Tags</label>
         <input class="form-control" type="text" name="tags" id="tags" />
     </div>
-    <input class="btn btn-primary" type="submit" name="" id="" value="Create Game">
+    <input class="btn btn-primary" type="submit" name="" id="" value="Create Tabletop">
 </form>
 <%- include ('../partials/footer.ejs') %>
