--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nixie+One&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -12,11 +14,16 @@
 }
 
 html, body {
+    font-family: 'Montserrat', Courier, monospace;
     background-color: var(--bg-color);
     width: 100%;
     margin: 0;
     padding: 0;
     color: #f0f8ff;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    
 }
 
 main {
@@ -25,6 +32,21 @@ main {
 
 #burger-content {
     justify-content: right;
+}
+
+/* .navbar {
+    margin: 0 auto;
+    height: 70px;
+    padding: 0;
+} */
+
+.nav-item {
+    padding: 0 10px;
+}
+
+.nav-item:hover {
+    cursor: pointer;
+    background-color: var(--third-color);
 }
 
 .games-list {
@@ -75,18 +97,84 @@ a:link {
 
 .game-info {
     background-color: var(--secondary-color);
-    margin: 50px 30px;
+    margin: 50px auto;
+    max-width: 1200px;
     border: 2px solid var(--dark-color);
     border-radius: 10px;
 }
 
 .description {
     padding: 30px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 300px 500px 50px;
+    grid-gap: 10px;
+    /* width: 100vw;
+    height: 100vw; */
+}
+
+.upper-row {
+    margin: 0 30px;
+}
+
+.top-right {
+    grid-column: 3 / 4;
+    align-self: center;
+}
+
+.mid-left {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.mid-mid {
+    margin: 0 30px;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.mid-right {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.btm-mid {
+    grid-column: 2 / 3;
+}
+
+.mid-left-mid {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+
+iframe {
+    border-radius: 30px;
+}
+
+.game-list {
+    list-style: none;
+    padding: 5px;
+    border: 2px solid rgb(38, 38, 38);
+    border-radius: 10px;
+    margin: 10px;
+    background-color: var(--dark-color);
+}
+
+.game-list:hover {
+    cursor: pointer;
+    background-color: var(--third-color);
 }
 
 .game-img {
     max-width: 225px;
     border-radius: 20px;
+}
+
+.game-show-edit {
+    display: flex;
+    justify-content: center;
+
 }
 
 .login {
@@ -104,4 +192,8 @@ a:link {
 
 .login-btn {
     margin: 10px auto;
+}
+
+.btn {
+    max-height: 40px;
 }
