--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -31,7 +31,7 @@
                 <% }) %>
             </ul>
         </div>
-        <div class="mid-right">
+        <div class="mid-mid">
             <h4 class="genre">Genre</h4>
             <ul>
                 <% game.genre.forEach(genre => { %>
