--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -23,9 +23,9 @@
   
     <form action="<%= baseUrl %>" method="post">
       <label for="username">Username</label>
-      <input type="text" name="username" id="username" required />
+      <input class="form-control" type="text" name="username" id="username" required />
       <label for="password">Password</label>
-      <input type="password" name="password" id="password" required />
+      <input class="form-control" type="password" name="password" id="password" required />
       <input class="button button-primary" type="submit" value="Sign Up" />
     </form>
 </div>
