Update images fixed.

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -5,7 +5,7 @@
         <div class="card" style="width: 18rem">
             <li class="card game">
                 <a class="game-desc" href="<%= baseUrl %>/<%= game.id %>">
-                    <figure><img class="card-img-top" src="<%= game.img %>"/></figure>
+                    <figure><img class="card-img-top embed-responsive-item" src="<%= game.img %>"/></figure>
                     <div class="card-body">
                       <h4 class="card-title"><%= game.name %></h4>
                       <p class="card-text"><%= game.type %></p>
