--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -59,6 +59,7 @@
 
         <div class="action-bar game-show-edit btm-mid">
             <a class="btn btn-primary edit" href="<%= baseUrl %>/<%= game.id %>/edit">Edit</a>
+            <a class="btn btn-primary edit" href="<%= baseUrl %>">Cancel</a>
         </div>
     </div>
 </div>
