--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,6 +57,10 @@ main {
     list-style: none;
 }
 
+ul {
+    padding-left: 0;
+}
+
 .card {
     background-color: var(--secondary-color);
     width: 100%;
@@ -72,13 +76,19 @@ main {
     box-shadow: -6px 6px 16px 0 rgba(0, 0,0,0.2);
 }
 
+.card-img-top {
+    width: 100%;
+    height: 235px;
+    object-fit: cover;
+}
+/* 
 .game img {
     width: 100%;
     height: 100%;
     max-height: 240px;
     object-fit: cover;
     display: block;
-}
+} */
 
 .action-bar {
     display: flex;
